--- a/recipes/arrow_test/meta.yaml
+++ b/recipes/arrow_test/meta.yaml
@@ -1,6 +1,6 @@
-{% set version = "0.0" %}
+{% set version = "9.0.0" %}
 {% set cuda_enabled = cuda_compiler_version != "None" %}
-{% set build_ext_version = "0.0" %}
+{% set build_ext_version = "3.0.0" %}
 {% set build_ext = "cuda" if cuda_enabled else "cpu" %}
 {% set proc_build_number = "0" %}
 
@@ -149,7 +149,7 @@ outputs:
         - {{ pin_subpackage('arrow-cpp', exact=True) }}
         - {{ pin_compatible('numpy', lower_bound='1.16') }}
         # empty parquet-cpp metapackage, force old versions to be uninstalled
-        - parquet-cpp 1.5.1.*
+        # - parquet-cpp 1.5.1.*
         - python
       run_constrained:
         - arrow-cpp-proc * {{ build_ext }}
